--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>North Rapids Hotel</title>
 </head>
 
@@ -12,30 +13,34 @@
 
     <nav class="navbar">
         <div class="navbar_container">
-            <a href="/" id="navbar_logo">NEXT</a>
-            <div class="navbar_toggles" id="mobile-menu">
+            <!-- <img src="/images/compass_rosa.png" alt="" id="compass_logo"> -->
+            <a href="/" id="navbar_logo">North Rapids Hotel</a>
+            <div class="navbar_toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
             <ul class="navbar_menu">
+                <br>
+                <br>
+                <br>
                 <li class="navbar_item">
-                    <a href="/index.html" class="navbar_links">Home</a>
+                    <a href="index.html" class="navbar_links">Home</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/rooms.html" class="navbar_links">Rooms</a>
+                    <a href="rooms.html" class="navbar_links">Rooms</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="/contact.html" class="navbar_links">Contacts</a>
+                    <a href="contact.html" class="navbar_links">Contacts</a>
                 </li>
-                <li class="navbar_button">
+                <!-- <li class="navbar_button">
                     <a href="/" class="button">Menu</a>
-                </li>
+                </li>  -->
             </ul>
         </div>
     </nav>
 
-    <div class="topnav">
+    <!-- <div class="topnav">
         <img src="images/compass.svg" alt="" width="100">
         <p>North Rapids Hotel</p>
         <a class="active" href="#home">Home</a>
@@ -54,7 +59,7 @@
     <br>
     <br>
 
-    <video src="images/stream-video.mp4" width="300px" loop controls autoplay muted ></video>
+    <video src="images/stream-video.mp4" width="300px" loop controls autoplay muted ></video> -->
 
     
     
