--- a/index.html
+++ b/index.html
@@ -4,26 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon4.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/a51a2dca4e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>North Rapids Hotel</title>
+    <title>Acron</title>
 </head>
 
 <body>
 
+    <!-- navbar section -->
     <nav class="navbar">
-        <div class="navbar_container">
+        <nav class="navbar_container">
             <!-- <img src="/images/compass_rosa.png" alt="" id="compass_logo"> -->
-            <a href="/" id="navbar_logo">North Rapids Hotel</a>
-            <div class="navbar_toggle" id="mobile-menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
-            <ul class="navbar_menu">
-                <br>
-                <br>
-                <br>
+            <a href="/" id="navbar_logo"><i class="fa-solid fa-mountain-sun"></i>Twin Peaks</a>
+            <nav class="navbar_toggle" id="mobile-menu">
+                <nav class="bar"></nav>
+                <nav class="bar"></nav>
+                <nav class="bar"></nav>
+            </nav>
+            <ul class="navbar_menu">               
                 <li class="navbar_item">
                     <a href="index.html" class="navbar_links">Home</a>
                 </li>
@@ -37,8 +36,29 @@
                     <a href="/" class="button">Menu</a>
                 </li>  -->
             </ul>
-        </div>
+        </nav>
     </nav>
+
+    <!-- hero section -->
+    <main class="main">
+        <section class="main_container">
+            <section class="main_content">
+                <h1>WILDLIFE HOTEL FOR THE ADVENTUROUS</h1>
+                <h2>Rooms from $99 to $1298 / night</h2>                
+            </section>
+            <sektion>
+                <img src="images/river.jpg" alt="" class="main_img">
+                <h2>THE HOTEL</h2>
+            </section>
+        </section>
+
+    </main>
+
+    <script src="app.js"></script>
+
+    <footer>
+        <p>Copyright 2023</p>
+    </footer>
 
     <!-- <div class="topnav">
         <img src="images/compass.svg" alt="" width="100">
