rum sida snart klar

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
     <!-- navbar section -->
     <nav class="navbar">
-        <nav class="navbar_container">
-            <!-- <img src="/images/compass_rosa.png" alt="" id="compass_logo"> -->
+        <nav class="navbar_container">            
             <a href="/" id="navbar_logo"><i class="fa-solid fa-mountain-sun"></i>Twin Peaks</a>
             <nav class="navbar_toggle" id="mobile-menu">
                 <nav class="bar"></nav>
@@ -32,9 +31,9 @@
                 <li class="navbar_item">
                     <a href="contact.html" class="navbar_links">Contacts</a>
                 </li>
-                <!-- <li class="navbar_button">
-                    <a href="/" class="button">Menu</a>
-                </li>  -->
+                <li class="navbar_button">
+                    <a href="/" class="button">Back to top</a>
+                </li> 
             </ul>
         </nav>
     </nav>
@@ -89,7 +88,7 @@
     <article class="article_2">
         <section>
             <h3 class="article_2_h3">Welcome to North Rapids County</h3>
-            <p class="article_2_p">Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Aliquam malesuada bibendum arcu vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut. Senectus et netus et malesuada fames ac. Mauris augue neque gravida in. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. At tellus at urna condimentum. Euismod in pellentesque massa placerat duis ultricies. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero. <br><br>Mauris ultrices eros in cursus turpis massa tincidunt dui. Ut faucibus pulvinar elementum integer. Lectus quam id leo in vitae turpis massa sed. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. </p>
+            <p class="article_2_p">Nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Aliquam malesuada bibendum arcu vitae. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut. Senectus et netus et malesuada fames ac. Mauris augue neque gravida in. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. At tellus at urna condimentum. Euismod in pellentesque massa placerat duis ultricies. Nunc pulvinar sapien et ligula ullamcorper malesuada proin libero. <br><br>Mauris ultrices eros in cursus turpis massa tincidunt dui. Ut faucibus pulvinar elementum integer. Lectus quam id leo in vitae turpis massa sed. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate.</p>
         </section>
         <figure>
             <video class="video" src="images/stream-video.mp4" width="300px" loop controls autoplay muted ></video>
